<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_item_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_home_linerlayout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp">

            <ImageView
                android:id="@+id/iv_home_icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_7" />

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_home_icon1"
                android:text="@string/tv_mother"
                android:textColor="@color/home_area"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_home_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/tv_origin"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iv_home_titlepic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:layout_toLeftOf="@+id/tv_home_origin"
                android:src="@drawable/ic_qiye_gvp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/iv_home_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/item_home_image" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_home_valid"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_home_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="90天"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_balck_stroke"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_home_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_home_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_income_number"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/tv_home_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/tv_home_percent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/iv_home_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ear_jia"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/iv_home_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ear_turn"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_home_income"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_9" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_home_year"
                            android:textSize="10sp" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:id="@+id/ll_home_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <TextView
                            android:id="@+id/tv_home_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_income_number"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_discount_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_home_discount"
                        android:layout_centerHorizontal="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_10" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_mother_buy"
                            android:textColor="@color/home_area"
                            android:textSize="10sp" />
                    </LinearLayout>
                </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_year_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/shouye_sanjiao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="5dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_highest" />

            <TextView
                android:id="@+id/tv_home_highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_income_number"
                android:textColor="@color/home_area" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_percent"
                android:textColor="@color/home_area"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_year" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_home_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_invest_button"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_home_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="立即投资"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/rl_home_surprise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/kuohao_03"/>

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="加息惊喜"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
